# tabibu

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
Tabibu/: Package.swift
Tabibu/Sources/CTabibuCore/: shim.c
Tabibu/Sources/CTabibuCore/include/: tabibu_core.h
Tabibu/Sources/Tabibu/: Main.swift
Tabibu/Sources/Tabibu/Components/: DesignTokens.swift  LucideIcon.swift  PermissionCard.swift  PressureDial.swift  ProgressStream.swift  ReclaimBar.swift  ResultView.swift  ReviewTable.swift  StateViews.swift  TierBadge.swift
Tabibu/Sources/Tabibu/Core/: CoreBridge.swift
Tabibu/Sources/Tabibu/Model/: AppModel.swift  ScanSession.swift
Tabibu/Sources/Tabibu/Services/: BatteryService.swift  SystemServices.swift
Tabibu/Sources/Tabibu/Views/: BatteryView.swift  DuplicatesView.swift  MemoryCPUView.swift  RootView.swift  ScanFlowView.swift  SpaceMapView.swift  StartupItemsView.swift  UninstallerView.swift
TabibuHelper/: Package.swift  xr.seede.tabibu.helper.plist
TabibuHelper/Sources/TabibuHelper/: HelperProtocol.swift  main.swift
TabibuMonitor/: Package.swift  budget-test.sh
TabibuMonitor/Sources/TabibuMonitor/: CoreBridge.swift  MonitorContentView.swift  main.swift
app/: package-lock.json  package.json
app/src/: icons.js  index.html  main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  main.rs  system.rs  tray.rs
core/: Cargo.toml  deny.toml  rustfmt.toml
core/benches-baseline/find_duplicates_2k_files_30pct_dupes/: benchmark.json  estimates.json
core/benches-baseline/size_tree_5k_files/: benchmark.json  estimates.json
core/benches-baseline/size_tree_5k_files_depth1/: benchmark.json  estimates.json
core/crates/tabibu-bench/: Cargo.toml
core/crates/tabibu-bench/src/: lib.rs
core/crates/tabibu-brew/: Cargo.toml
core/crates/tabibu-brew/src/: lib.rs
core/crates/tabibu-dupes/: Cargo.toml
core/crates/tabibu-dupes/benches/: dupes.rs
core/crates/tabibu-dupes/src/: lib.rs
core/crates/tabibu-engine/: Cargo.toml
core/crates/tabibu-engine/src/: cancel.rs  denylist.rs  item.rs  lib.rs  orchestrate.rs  reclaim.rs  scanner.rs  undo.rs
core/crates/tabibu-engine/tests/: denylist_prop.rs  golden_reclaim.rs
core/crates/tabibu-ffi/: Cargo.toml
core/crates/tabibu-ffi/src/: lib.rs
core/crates/tabibu-ffi/tests/: roundtrip.rs
core/crates/tabibu-junk/: Cargo.toml
core/crates/tabibu-junk/src/: large_old.rs  lib.rs
core/crates/tabibu-junk/tests/: scanners.rs
core/crates/tabibu-malware/: Cargo.toml
core/crates/tabibu-malware/src/: adware.rs  clamav.rs  lib.rs  profiles.rs  vault.rs
core/crates/tabibu-malware/tests/: malware.rs
core/crates/tabibu-monitor/: Cargo.toml
core/crates/tabibu-monitor/src/: lib.rs  rosetta.rs
core/crates/tabibu-telemetry/: Cargo.toml
core/crates/tabibu-telemetry/src/: lib.rs
core/crates/tabibu-uninstall/: Cargo.toml
core/crates/tabibu-uninstall/src/: apps.rs  fsutil.rs  lib.rs  orphan.rs  remnants.rs  stale.rs  unused.rs
core/crates/tabibu-uninstall/tests/: uninstall.rs
core/crates/tabibu-walk/: Cargo.toml
core/crates/tabibu-walk/benches/: walk.rs
core/crates/tabibu-walk/src/: lib.rs
core/crates/tabibu-walk/tests/: walk.rs
docs/: build.mjs  ffi.md  index.html  package-lock.json  package.json  release.md  setup.md
docs/adr/: 0001-ffi-hand-written-c-abi-json.md  0002-swiftpm-instead-of-xcodeproj.md  0003-tauri-shell-supersedes-swift.md
docs/assets/: docs.css  gourd.path  mermaid-init.js  navmark.js
docs/modules/: dupes.md  engine.md  helper.md  junk.md  malware.md  monitor.md  telemetry.md  uninstall.md  walk.md
scripts/: bench-gate.sh  build-app.sh  build-core.sh  make-app.sh  make-dmg.sh  make-icon.sh  sync-version.sh  uninstall-tabibu.sh
