[package]
name = "tabibu-brew"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false               # internal workspace crate, never published

[dependencies]
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true

[lints]
workspace = true
