[package]
name = "tabibu-dupes"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tabibu-engine.workspace = true
rayon.workspace = true
blake3.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
serde_json.workspace = true
criterion.workspace = true

[[bench]]
name = "dupes"
harness = false

[lints]
workspace = true
