[package]
name = "tabibu-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false               # internal workspace crate, never published

[dependencies]
libc.workspace = true
serde.workspace = true
sysinfo.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
