[package]
name = "tabibu-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false               # internal workspace crate, never published

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
