[package]
name = "tabibu-uninstall"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false               # internal workspace crate, never published

[dependencies]
tabibu-engine.workspace = true
plist.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
