[package]
name = "tabibu-walk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false               # internal workspace crate, never published

[dependencies]
tabibu-engine.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
serde_json.workspace = true

[[bench]]
name = "walk"
harness = false

[lints]
workspace = true
